# aoc-initializer-cli

./: Cargo.toml  README.md
src/: main.rs
src/commands/: config.rs  init_challenge.rs  mod.rs
src/commands/templates/: config  main
