[package]
name = "aoc-initializer-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
reqwest = "0.11.18"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.94"
tokio = {version="1.26.0", features=["full"]}
